--- a/Classifiers_combined.ipynb
+++ b/Classifiers_combined.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "id": "91a77338",
    "metadata": {},
    "outputs": [],
@@ -18,9 +18,18 @@
     "from sklearn import tree\n",
     "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeRegressor as dtr\n",
     "\n",
     "from sklearn.metrics import f1_score\n",
     "from sklearn.metrics import balanced_accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80e877f4",
+   "metadata": {},
+   "source": [
+    "### Data Loading"
    ]
   },
   {
@@ -30,7 +39,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = sqlite3.connect('RDS-2013-0009.4_SQLITE/Data/FPA_FOD_20170508.sqlite')"
+    "conn = sqlite3.connect('RDS-2013-0009.4_SQLITE/Data/FPA_FOD_20170508.sqlite')\n",
+    "\n",
+    "#conn = sqlite3.connect('FPA_FOD_20170508.sqlite')"
    ]
   },
   {
@@ -109,6 +120,14 @@
    "source": [
     "df = pd.read_sql_query(\"SELECT FIRE_YEAR,STAT_CAUSE_DESCR, STAT_CAUSE_CODE, LATITUDE,LONGITUDE,STATE,DISCOVERY_DATE,DISCOVERY_DOY,FIRE_SIZE,DISCOVERY_TIME, FIPS_CODE, CONT_DATE, OWNER_DESCR FROM 'Fires'\", conn)\n",
     "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9922e1d3",
+   "metadata": {},
+   "source": [
+    "### Data Preprocessing and EDA"
    ]
   },
   {
@@ -356,6 +375,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0696d8c8",
+   "metadata": {},
+   "source": [
+    "### Model Prep"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "027ea3cb",
@@ -487,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ff51ee9",
+   "id": "8f50ec74",
    "metadata": {},
    "source": [
     "### KNN Classifier"
@@ -517,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15f78183",
+   "id": "f82bfd5a",
    "metadata": {},
    "source": [
     "### Decision Tree Classifier"
@@ -560,7 +587,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2154b800",
+   "id": "0754a34b",
    "metadata": {},
    "source": [
     "### RandomForest Classifier"
@@ -596,7 +623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d47c360",
+   "id": "413460d9",
    "metadata": {},
    "source": [
     "### Adaboost Classifier"
@@ -647,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ec2826f",
+   "id": "56b4b5ec",
    "metadata": {},
    "source": [
     "### Logistic Regression"
@@ -656,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ad01b770",
+   "id": "8b65d890",
    "metadata": {},
    "outputs": [
     {
@@ -684,25 +711,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f00079a",
+   "cell_type": "markdown",
+   "id": "c43d3be5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Decision Tree Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "d25e050c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score on training set: 1.0\n",
+      "Score on testing set: 0.31086433060705987\n"
+     ]
+    }
+   ],
+   "source": [
+    "reg = dtr(random_state = 42)\n",
+    "reg_dt = reg.fit(X_train_3, y_train_3)\n",
+    "\n",
+    "\n",
+    "# Print scores\n",
+    "print(f'Score on training set: {reg_dt.score(X_train_3, y_train_3)}')\n",
+    "print(f'Score on testing set: {reg_dt.score(X_test_3, y_test_3)}')\n",
+    "\n",
+    "\n",
+    "# y_pred = reg.predict(X_test)\n",
+    "# print(‘MSE =’, mse(y_pred, y_test))\n",
+    "# print(‘MAE =’, mae(y_pred, y_test))\n",
+    "# print(‘R2 Score =’, r2_score(y_pred, y_test))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32806a63",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bdc13c66",
+   "id": "0821962d",
    "metadata": {},
    "outputs": [],
    "source": []
