--- a/Classifiers_combined.ipynb
+++ b/Classifiers_combined.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "806fe754",
+   "metadata": {},
+   "source": [
+    "# Predicting Wildfire Causes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "id": "91a77338",
    "metadata": {},
    "outputs": [],
@@ -11,22 +19,32 @@
     "import numpy as np\n",
     "import sqlite3\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "from sklearn.preprocessing import scale\n",
     "from sklearn import tree, preprocessing\n",
     "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn import tree\n",
     "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.tree import DecisionTreeRegressor as dtr\n",
     "\n",
+    "# Import required libraries for performance metrics\n",
     "from sklearn.metrics import f1_score\n",
-    "from sklearn.metrics import balanced_accuracy_score"
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "from sklearn.metrics import make_scorer\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import precision_score\n",
+    "from sklearn.metrics import recall_score\n",
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn.model_selection import cross_validate\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "80e877f4",
+   "id": "35cb35bf",
    "metadata": {},
    "source": [
     "### Data Loading"
@@ -124,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9922e1d3",
+   "id": "a4a8adfd",
    "metadata": {},
    "source": [
     "### Data Preprocessing and EDA"
@@ -376,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0696d8c8",
+   "id": "4ee6007c",
    "metadata": {},
    "source": [
     "### Model Prep"
@@ -514,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f50ec74",
+   "id": "e46c331b",
    "metadata": {},
    "source": [
     "### KNN Classifier"
@@ -544,7 +562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f82bfd5a",
+   "id": "cfd270d7",
    "metadata": {},
    "source": [
     "### Decision Tree Classifier"
@@ -587,7 +605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0754a34b",
+   "id": "c281bc5a",
    "metadata": {},
    "source": [
     "### RandomForest Classifier"
@@ -623,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "413460d9",
+   "id": "b4c6fe48",
    "metadata": {},
    "source": [
     "### Adaboost Classifier"
@@ -674,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56b4b5ec",
+   "id": "1d109000",
    "metadata": {},
    "source": [
     "### Logistic Regression"
@@ -683,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "8b65d890",
+   "id": "19251c35",
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c43d3be5",
+   "id": "fa9753fd",
    "metadata": {},
    "source": [
     "### Decision Tree Regression"
@@ -721,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "d25e050c",
+   "id": "97b48d4f",
    "metadata": {},
    "outputs": [
     {
@@ -750,9 +768,222 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "603d4776",
+   "metadata": {},
+   "source": [
+    "### Evaluating and Comparing the Classification Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "dbfa8572",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define dictionary with performance metrics\n",
+    "scoring = {'accuracy':make_scorer(accuracy_score), \n",
+    "           'precision':make_scorer(precision_score),\n",
+    "           'recall':make_scorer(recall_score), \n",
+    "           'f1_score':make_scorer(f1_score)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "dd6a975e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate the machine learning classifiers\n",
+    "log_model = LogisticRegression(solver='lbfgs', \n",
+    "                           penalty='l2', \n",
+    "                           multi_class='multinomial', \n",
+    "                           C=.9, \n",
+    "                           max_iter=500, \n",
+    "                           n_jobs=3)\n",
+    "knc_model = KNeighborsClassifier(n_neighbors = 7)\n",
+    "dtr_model = tree.DecisionTreeClassifier(criterion = 'gini', \n",
+    "                            max_depth = 200, \n",
+    "                            min_samples_split = 100, \n",
+    "                            min_samples_leaf = 10)\n",
+    "rfc_model = RandomForestClassifier(n_estimators = 50, \n",
+    "                            max_depth = 100, \n",
+    "                            min_samples_split = 100, \n",
+    "                            min_samples_leaf =40)\n",
+    "ada_model = AdaBoostClassifier(base_estimator = \n",
+    "                               tree.DecisionTreeClassifier\n",
+    "                               (max_depth = 2), n_estimators = 30)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "95347c6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the models evaluation function\n",
+    "def models_evaluation(X, y, folds):\n",
+    "    \n",
+    "    '''\n",
+    "    X : data set features\n",
+    "    y : data set target\n",
+    "    folds : number of cross-validation folds\n",
+    "    \n",
+    "    '''\n",
+    "    \n",
+    "    # Perform cross-validation to each machine learning classifier\n",
+    "    log = cross_validate(log_model, X, y, cv=folds, scoring=scoring)\n",
+    "    knc = cross_validate(knc_model, X, y, cv=folds, scoring=scoring)\n",
+    "    dtr = cross_validate(dtr_model, X, y, cv=folds, scoring=scoring)\n",
+    "    rfc = cross_validate(rfc_model, X, y, cv=folds, scoring=scoring)\n",
+    "    ada = cross_validate(ada_model, X, y, cv=folds, scoring=scoring)\n",
+    "\n",
+    "    # Create a data frame with the models perfoamnce metrics scores\n",
+    "    models_scores_table = pd.DataFrame({'Logistic Regression':[log['test_accuracy'].mean(),\n",
+    "                                                               log['test_precision'].mean(),\n",
+    "                                                               log['test_recall'].mean(),\n",
+    "                                                               log['test_f1_score'].mean()],\n",
+    "                                       \n",
+    "                                      'K Nearest Neighbor Classifier':[knc['test_accuracy'].mean(),\n",
+    "                                                                   knc['test_precision'].mean(),\n",
+    "                                                                   knc['test_recall'].mean(),\n",
+    "                                                                   knc['test_f1_score'].mean()],\n",
+    "                                       \n",
+    "                                      'Decision Tree':[dtr['test_accuracy'].mean(),\n",
+    "                                                       dtr['test_precision'].mean(),\n",
+    "                                                       dtr['test_recall'].mean(),\n",
+    "                                                       dtr['test_f1_score'].mean()],\n",
+    "                                       \n",
+    "                                      'Random Forest':[rfc['test_accuracy'].mean(),\n",
+    "                                                       rfc['test_precision'].mean(),\n",
+    "                                                       rfc['test_recall'].mean(),\n",
+    "                                                       rfc['test_f1_score'].mean()],\n",
+    "                                       \n",
+    "                                      'AdaBoost':[ada['test_accuracy'].mean(),\n",
+    "                                                              ada['test_precision'].mean(),\n",
+    "                                                              ada['test_recall'].mean(),\n",
+    "                                                              ada['test_f1_score'].mean()]},\n",
+    "                                      \n",
+    "                                      index=['Accuracy', 'Precision', 'Recall', 'F1 Score'])\n",
+    "    \n",
+    "    # Add 'Best Score' column\n",
+    "    models_scores_table['Best Score'] = models_scores_table.idxmax(axis=1)\n",
+    "    \n",
+    "    # Return models performance metrics scores data frame\n",
+    "    return(models_scores_table)\n",
+    "  \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "cbd220f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Logistic Regression</th>\n",
+       "      <th>K Nearest Neighbor Classifier</th>\n",
+       "      <th>Decision Tree</th>\n",
+       "      <th>Random Forest</th>\n",
+       "      <th>AdaBoost</th>\n",
+       "      <th>Best Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Accuracy</th>\n",
+       "      <td>0.620173</td>\n",
+       "      <td>0.599687</td>\n",
+       "      <td>0.548243</td>\n",
+       "      <td>0.643069</td>\n",
+       "      <td>0.575730</td>\n",
+       "      <td>Random Forest</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Precision</th>\n",
+       "      <td>0.662038</td>\n",
+       "      <td>0.693382</td>\n",
+       "      <td>0.669336</td>\n",
+       "      <td>0.756371</td>\n",
+       "      <td>0.728768</td>\n",
+       "      <td>Random Forest</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Recall</th>\n",
+       "      <td>0.771713</td>\n",
+       "      <td>0.643150</td>\n",
+       "      <td>0.530058</td>\n",
+       "      <td>0.663496</td>\n",
+       "      <td>0.586012</td>\n",
+       "      <td>Logistic Regression</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>F1 Score</th>\n",
+       "      <td>0.711490</td>\n",
+       "      <td>0.658807</td>\n",
+       "      <td>0.534391</td>\n",
+       "      <td>0.673445</td>\n",
+       "      <td>0.565395</td>\n",
+       "      <td>Logistic Regression</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Logistic Regression  K Nearest Neighbor Classifier  Decision Tree  \\\n",
+       "Accuracy              0.620173                       0.599687       0.548243   \n",
+       "Precision             0.662038                       0.693382       0.669336   \n",
+       "Recall                0.771713                       0.643150       0.530058   \n",
+       "F1 Score              0.711490                       0.658807       0.534391   \n",
+       "\n",
+       "           Random Forest  AdaBoost           Best Score  \n",
+       "Accuracy        0.643069  0.575730        Random Forest  \n",
+       "Precision       0.756371  0.728768        Random Forest  \n",
+       "Recall          0.663496  0.586012  Logistic Regression  \n",
+       "F1 Score        0.673445  0.565395  Logistic Regression  "
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Run models_evaluation function\n",
+    "models_evaluation(Xscaled,y_label , 5)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0821962d",
+   "id": "9dbb9c78",
    "metadata": {},
    "outputs": [],
    "source": []
